# example-kaiko-stream

./: .env.exampe  Cargo.toml  README.md  build.rs
proto/kaiko/: benchmark_reference_rates.proto  streaming.proto
src/: main.rs
